Bug 150695 - Modern IDB: autoIncrement support
Summary: Modern IDB: autoIncrement support
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: Safari 9
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Brady Eidson
URL:
Keywords:
Depends on: 150713
Blocks: 149117
  Show dependency treegraph
 
Reported: 2015-10-29 14:50 PDT by Brady Eidson
Modified: 2015-10-30 06:34 PDT (History)
4 users (show)

See Also:


Attachments
Patch v1 (16.05 KB, patch)
2015-10-29 15:11 PDT, Brady Eidson
no flags Details | Formatted Diff | Diff
Patch v2 (16.11 KB, patch)
2015-10-29 16:32 PDT, Brady Eidson
achristensen: review+
commit-queue: commit-queue-
Details | Formatted Diff | Diff
v3 - Landing attempt (18.22 KB, patch)
2015-10-29 20:57 PDT, Brady Eidson
commit-queue: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Brady Eidson 2015-10-29 14:50:28 PDT
Modern IDB: autoIncrement support
Comment 1 Brady Eidson 2015-10-29 15:11:29 PDT
Created attachment 264351 [details]
Patch v1
Comment 2 Brady Eidson 2015-10-29 16:32:52 PDT
Created attachment 264363 [details]
Patch v2
Comment 3 WebKit Commit Bot 2015-10-29 18:58:12 PDT
Comment on attachment 264363 [details]
Patch v2

Rejecting attachment 264363 [details] from commit-queue.

Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 264363, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit

Last 500 characters of output:
fs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ...
Currently at 191767 = be75106b6447e60d9d94ceef50ded56b59eca79c
r191768 = 3fa9ae7a4beb0333f53470f05b88acea64634c89
r191770 = 864565bcdf3fc20d089f8566fe9cdb1a41868555
r191771 = c0ced0937ac7958157f59bf021d9af08c63b70d9
Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc
First, rewinding head to replay your work on top of it...
Fast-forwarded master to refs/remotes/origin/master.

Full output: http://webkit-queues.webkit.org/results/356220
Comment 4 Brady Eidson 2015-10-29 20:57:10 PDT
Created attachment 264377 [details]
v3 - Landing attempt
Comment 5 WebKit Commit Bot 2015-10-29 21:28:59 PDT
Comment on attachment 264377 [details]
v3 - Landing attempt

Rejecting attachment 264377 [details] from commit-queue.

Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 264377, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit

Last 500 characters of output:
/git.webkit.org/WebKit
   cdb41fe..57bc596  master     -> origin/master
Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ...
Currently at 191773 = cdb41fe1db24391f6bf759539e7b48ba2d5b11b3
r191774 = 57bc5961cdb55ed0b7745efebea612c0e97ee9a1
Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc
First, rewinding head to replay your work on top of it...
Fast-forwarded master to refs/remotes/origin/master.

Full output: http://webkit-queues.webkit.org/results/356711
Comment 6 Brady Eidson 2015-10-29 21:56:23 PDT
Commit queue crazy busted.

Manually landed in https://trac.webkit.org/changeset/191776
Comment 7 Jaehun Lim 2015-10-29 23:40:30 PDT
Comment on attachment 264377 [details]
v3 - Landing attempt

View in context: https://bugs.webkit.org/attachment.cgi?id=264377&action=review

> Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabase.cpp:336
> +        keyWasGenerated = true;

Please check 'keyWasGenerated'. It is set true here but not used any more. This makes EFL buildbot red.

../../Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabase.cpp: In member function ‘void WebCore::IDBServer::UniqueIDBDatabase::performPutOrAdd(uint64_t, const WebCore::IDBResourceIdentifier&, uint64_t, const WebCore::IDBKeyData&, const WebCore::ThreadSafeDataBuffer&, WebCore::IndexedDB::ObjectStoreOverwriteMode)’:
../../Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabase.cpp:316:10: error: variable ‘keyWasGenerated’ set but not used [-Werror=unused-but-set-variable]
     bool keyWasGenerated = false;
          ^
Comment 8 Brady Eidson 2015-10-30 06:34:14 PDT
(In reply to comment #7)
> Comment on attachment 264377 [details]
> v3 - Landing attempt
> 
> View in context:
> https://bugs.webkit.org/attachment.cgi?id=264377&action=review
> 
> > Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabase.cpp:336
> > +        keyWasGenerated = true;
> 
> Please check 'keyWasGenerated'. It is set true here but not used any more.
> This makes EFL buildbot red.
> 
> ../../Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabase.cpp: In
> member function ‘void
> WebCore::IDBServer::UniqueIDBDatabase::performPutOrAdd(uint64_t, const
> WebCore::IDBResourceIdentifier&, uint64_t, const WebCore::IDBKeyData&, const
> WebCore::ThreadSafeDataBuffer&,
> WebCore::IndexedDB::ObjectStoreOverwriteMode)’:
> ../../Source/WebCore/Modules/indexeddb/server/UniqueIDBDatabase.cpp:316:10:
> error: variable ‘keyWasGenerated’ set but not used
> [-Werror=unused-but-set-variable]
>      bool keyWasGenerated = false;
>           ^

Saw the other bug where that was removed, and commented there.

I would've seen this, but when I'd last looked at patch v2 in the EWS the EFL bot was in "unable to build without patch" state - https://webkit-queues.webkit.org/patch/264363

Usually when one of the bots is in that state repeatedly it doesn't come out of it to be a hard red, so I hadn't watched any longer.

Sorry bout that.